               8. features.conf
                      o parkedplay variable added (who to beep at)
                      o parkedmusicclass
                      o atxfernoanswertimeout variable added
                      o parkcall variable added (one step parking)
                      o improved documentation for dynamic feature declarations!
               9. iax.conf
                      o adsi variable added
                      o mohinterpret variable added
                      o mohsuggest variable added
                      o jitterbuffer updates
                      o iaxthreadcount variable added
                      o iaxmaxthreadcount variable added
                      o the way to specify TOS has changed.
                      o mailboxdetail variable has been REMOVED.
              10. indications.conf
                      o [bg] entry added (Bulgaria).
                      o [il] entry added (Israel)
                      o [in] entry added (India)
                      o [jp] entry added (Japan)
                      o [my] entry added (Malaysia)
                      o [th] entry added (Thailand)
              11. manager.conf
                      o webenabled variable added
                      o httptimeout variable added
                      o timestampevents variable added
              12. mgcp.conf
                      o Jitterbuffer support added
              13. misdn.conf
                      o l1watcher_timeout variable added
                      o pp_l2_check variable added
                      o echocancelwhenbridged variable added
                      o echotraining variable added
                      o max_incoming variable added
                      o max_outgoing variable added
              14. modules.conf
                      o a comment for preloading res_speech.so is added
                      o mention of global symbols is removed